--- a/src/styles.css
+++ b/src/styles.css
@@ -81,6 +81,7 @@ footer a:hover {
         flex-direction: column;
         justify-content: space-between;
         color: white;
+        height: 90vh;
     }
     header,
     footer {
