--- a/src/styles.css
+++ b/src/styles.css
@@ -81,7 +81,7 @@ footer a:hover {
         flex-direction: column;
         justify-content: space-between;
         color: white;
-        height: 90vh;
+        height: auto;
     }
     header,
     footer {
@@ -97,5 +97,6 @@ footer a:hover {
         background: url(bg-photo.jpg) no-repeat center center fixed
             rgba(0, 0, 0, 0.116);
         background-size: cover;
+        height: (100vh - 180px);
     }
 }
