--- a/src/stylesnew.css
+++ b/src/stylesnew.css
@@ -12,7 +12,7 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: Arial, sans-serif;
+    font-family: "Azeret Mono", monospace;
 }
 
 body {
@@ -103,4 +103,13 @@ body {
 
 .iconesocial {
     width: 16px;
+}
+
+@media (max-width: 768px) {
+    .jimmy {
+        width: 60vw;
+    }
+    .linksocial {
+        font-size: 0.5rem;
+    }
 }
